[gd_scene load_steps=74 format=2]

[ext_resource path="res://scripts/GUI.gd" type="Script" id=1]
[ext_resource path="res://assets/buttons/settings-btn.png" type="Texture" id=2]
[ext_resource path="res://assets/in_game/heart_in.png" type="Texture" id=3]
[ext_resource path="res://assets/Screenshot 2025-05-16 225126.png" type="Texture" id=4]
[ext_resource path="res://assets/in_game/heart_out.png" type="Texture" id=5]
[ext_resource path="res://assets/in_game/timer_out.png" type="Texture" id=6]
[ext_resource path="res://assets/in_game/star_out.png" type="Texture" id=7]
[ext_resource path="res://assets/buttons/settings_btn-state2.png" type="Texture" id=8]
[ext_resource path="res://assets/in_game/star_in.png" type="Texture" id=9]
[ext_resource path="res://assets/in_game/timer_in.png" type="Texture" id=10]
[ext_resource path="res://assets/in_game/prog.png" type="Texture" id=11]
[ext_resource path="res://assets/in_game/progress.png" type="Texture" id=12]
[ext_resource path="res://assets/in_game/progress_out.png" type="Texture" id=13]
[ext_resource path="res://assets/in_game/smol.png" type="Texture" id=14]
[ext_resource path="res://assets/in_game/large.png" type="Texture" id=15]
[ext_resource path="res://assets/in_game/medium 1.png" type="Texture" id=16]
[ext_resource path="res://assets/in_game/medium.png" type="Texture" id=17]
[ext_resource path="res://assets/in_game/large 1.png" type="Texture" id=18]
[ext_resource path="res://assets/font/SuperDream-ax3vE.ttf" type="DynamicFontData" id=19]
[ext_resource path="res://assets/font/SuperMario256.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://assets/complete_level/home txt.png" type="Texture" id=21]
[ext_resource path="res://assets/in_game/small.png" type="Texture" id=22]
[ext_resource path="res://src/components/PauseMenu.tscn" type="PackedScene" id=23]
[ext_resource path="res://assets/buttons/bg.png" type="Texture" id=24]
[ext_resource path="res://assets/complete_level/home.png" type="Texture" id=25]
[ext_resource path="res://assets/complete_level/pressednext.png" type="Texture" id=26]
[ext_resource path="res://assets/complete_level/right star.png" type="Texture" id=27]
[ext_resource path="res://assets/complete_level/hovered replay.png" type="Texture" id=28]
[ext_resource path="res://assets/complete_level/sad pong pagong.png" type="Texture" id=29]
[ext_resource path="res://assets/complete_level/replay.png" type="Texture" id=30]
[ext_resource path="res://assets/complete_level/hovered next.png" type="Texture" id=31]
[ext_resource path="res://assets/complete_level/pressed replay.png" type="Texture" id=32]
[ext_resource path="res://assets/complete_level/left star.png" type="Texture" id=33]
[ext_resource path="res://assets/complete_level/middle star.png" type="Texture" id=34]
[ext_resource path="res://assets/complete_level/nxt level.png" type="Texture" id=35]
[ext_resource path="res://assets/complete_level/pressed home.png" type="Texture" id=36]
[ext_resource path="res://assets/complete_level/hovered home.png" type="Texture" id=37]
[ext_resource path="res://assets/complete_level/better luck nxt tym.png" type="Texture" id=38]
[ext_resource path="res://assets/complete_level/replay txt.png" type="Texture" id=39]
[ext_resource path="res://assets/complete_level/empty middle.png" type="Texture" id=40]
[ext_resource path="res://assets/complete_level/modal bg.png" type="Texture" id=41]
[ext_resource path="res://assets/complete_level/empty left.png" type="Texture" id=42]
[ext_resource path="res://assets/complete_level/empty right.png" type="Texture" id=44]
[ext_resource path="res://assets/complete_level/next txt.png" type="Texture" id=45]

[sub_resource type="DynamicFont" id=13]
size = 33
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=7]
size = 35
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=35]
size = 30
font_data = ExtResource( 20 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://assets/font/SuperMario256.ttf"

[sub_resource type="DynamicFont" id=12]
font_data = SubResource( 11 )

[sub_resource type="DynamicFont" id=6]
size = 19
font_data = ExtResource( 19 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 300, 241 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 300, 241 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 266, 266 )

[sub_resource type="StyleBoxTexture" id=36]
texture = ExtResource( 41 )
region_rect = Rect2( 0, 0, 11093, 11093 )

[sub_resource type="DynamicFont" id=37]
size = 37
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=34]
size = 25
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=40]
size = 25
font_data = ExtResource( 19 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 28 )
region_rect = Rect2( 0, 0, 4171, 4199 )

[sub_resource type="StyleBoxTexture" id=39]
texture = ExtResource( 32 )
region_rect = Rect2( 0, 0, 4171, 4199 )

[sub_resource type="StyleBoxTexture" id=17]
texture = ExtResource( 30 )
region_rect = Rect2( 0, 0, 4171, 4199 )

[sub_resource type="StyleBoxTexture" id=18]
texture = ExtResource( 31 )
region_rect = Rect2( 0, 0, 4171, 4199 )

[sub_resource type="StyleBoxTexture" id=19]
texture = ExtResource( 26 )
region_rect = Rect2( 0, 0, 4171, 4199 )

[sub_resource type="StyleBoxTexture" id=20]
texture = ExtResource( 35 )
region_rect = Rect2( 0, 0, 4171, 4199 )

[sub_resource type="StyleBoxTexture" id=21]
texture = ExtResource( 37 )
region_rect = Rect2( 0, 0, 4171, 4199 )

[sub_resource type="StyleBoxTexture" id=22]
texture = ExtResource( 36 )
region_rect = Rect2( 0, 0, 4171, 4199 )

[sub_resource type="StyleBoxTexture" id=23]
texture = ExtResource( 25 )
region_rect = Rect2( 0, 0, 4171, 4199 )

[sub_resource type="StyleBoxTexture" id=27]
texture = ExtResource( 28 )
region_rect = Rect2( 0, 0, 4171, 4199 )

[sub_resource type="StyleBoxTexture" id=28]
texture = ExtResource( 32 )
region_rect = Rect2( 0, 0, 4171, 4199 )

[sub_resource type="StyleBoxTexture" id=29]
texture = ExtResource( 30 )
region_rect = Rect2( 0, 0, 4171, 4199 )

[sub_resource type="StyleBoxTexture" id=24]
texture = ExtResource( 37 )
region_rect = Rect2( 0, 0, 4171, 4199 )

[sub_resource type="StyleBoxTexture" id=25]
texture = ExtResource( 36 )
region_rect = Rect2( 0, 0, 4171, 4199 )

[sub_resource type="StyleBoxTexture" id=26]
texture = ExtResource( 25 )
region_rect = Rect2( 0, 0, 4171, 4199 )

[sub_resource type="DynamicFont" id=30]
size = 40
font_data = ExtResource( 20 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -3.0
margin_right = 5.0
rect_pivot_offset = Vector2( 265, 324 )
script = ExtResource( 1 )
score_to_complete_level = 150

[node name="ProgressBar" type="TextureProgress" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -619.0
margin_top = 16.0
margin_right = 2981.0
margin_bottom = 852.0
rect_scale = Vector2( 0.08, 0.08 )
rounded = true
texture_under = ExtResource( 12 )
texture_over = ExtResource( 13 )
texture_progress = ExtResource( 11 )
texture_progress_offset = Vector2( 125, 100 )

[node name="Small" type="Sprite" parent="ProgressBar"]
position = Vector2( 587.5, 1100 )
scale = Vector2( 1.43281, 1.27736 )
texture = ExtResource( 22 )

[node name="Smol" type="Sprite" parent="ProgressBar"]
position = Vector2( 1537.5, 1050 )
scale = Vector2( 0.161133, 0.158966 )
texture = ExtResource( 14 )

[node name="Medium_blk" type="Sprite" parent="ProgressBar"]
position = Vector2( 2168.75, 1062.5 )
scale = Vector2( 1.02612, 0.979478 )
texture = ExtResource( 16 )

[node name="Medium_clr" type="Sprite" parent="ProgressBar"]
visible = false
position = Vector2( 2168.75, 1062.5 )
scale = Vector2( 0.229492, 0.244141 )
texture = ExtResource( 17 )

[node name="Large_blk" type="Sprite" parent="ProgressBar"]
position = Vector2( 2987.5, 1087.5 )
scale = Vector2( 1.58695, 1.21242 )
texture = ExtResource( 18 )

[node name="Large_clr" type="Sprite" parent="ProgressBar"]
visible = false
position = Vector2( 2975, 1075 )
scale = Vector2( 0.332031, 0.27832 )
texture = ExtResource( 15 )

[node name="Hearts" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="heart1" type="Sprite" parent="Hearts"]
position = Vector2( 598.102, 105.339 )
scale = Vector2( 0.0686367, 0.0627297 )
texture = ExtResource( 3 )

[node name="HeartOut" type="Sprite" parent="Hearts"]
position = Vector2( 595.454, 102.678 )
scale = Vector2( 0.0742481, 0.0695652 )
texture = ExtResource( 5 )

[node name="heart2" type="Sprite" parent="Hearts"]
position = Vector2( 639.118, 107.055 )
scale = Vector2( 0.0663163, 0.0594211 )
texture = ExtResource( 3 )

[node name="HeartOut2" type="Sprite" parent="Hearts"]
position = Vector2( 637.236, 104.61 )
scale = Vector2( 0.0714284, 0.0673913 )
texture = ExtResource( 5 )

[node name="heart3" type="Sprite" parent="Hearts"]
position = Vector2( 680.079, 105.935 )
scale = Vector2( 0.0662238, 0.0642649 )
texture = ExtResource( 3 )

[node name="HeartOut3" type="Sprite" parent="Hearts"]
position = Vector2( 677.658, 103.12 )
scale = Vector2( 0.069549, 0.0684783 )
texture = ExtResource( 5 )

[node name="Stars" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -16.0
margin_top = -1.0
margin_right = 24.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( -33, -245 )

[node name="StarOut" type="Sprite" parent="Stars"]
position = Vector2( 369.5, 45.5 )
scale = Vector2( 0.135446, 0.102339 )
texture = ExtResource( 7 )

[node name="Star1" type="Sprite" parent="Stars"]
position = Vector2( 370, 63 )
scale = Vector2( 0.134194, 0.0998703 )
texture = ExtResource( 9 )

[node name="StarOut2" type="Sprite" parent="Stars"]
position = Vector2( 419, 46 )
scale = Vector2( 0.138329, 0.0994152 )
texture = ExtResource( 7 )

[node name="Star2" type="Sprite" parent="Stars"]
position = Vector2( 419, 63 )
scale = Vector2( 0.127742, 0.0979248 )
texture = ExtResource( 9 )

[node name="StarOut3" type="Sprite" parent="Stars"]
position = Vector2( 469, 46 )
scale = Vector2( 0.135447, 0.100877 )
texture = ExtResource( 7 )

[node name="Star3" type="Sprite" parent="Stars"]
position = Vector2( 469, 63 )
scale = Vector2( 0.127742, 0.100081 )
texture = ExtResource( 9 )

[node name="lvl" type="RichTextLabel" parent="."]
margin_left = 795.0
margin_top = 29.0
margin_right = 984.0
margin_bottom = 96.0
custom_fonts/normal_font = SubResource( 13 )
text = "Level   :"

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 108.0
margin_top = 34.0
margin_right = 248.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 7 )

[node name="lvl_number" type="Label" parent="."]
margin_left = 913.0
margin_top = 31.0
margin_right = 952.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 35 )

[node name="FishCount" type="Label" parent="."]
margin_left = 87.0
margin_top = 96.0
margin_right = 118.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 12 )
text = "

"

[node name="LevelTimer" type="Timer" parent="."]
wait_time = 105.0
one_shot = true
autostart = true

[node name="TimeLeft" type="Label" parent="LevelTimer"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.192
margin_left = -31.0
margin_top = 38.0
margin_right = 60.0
margin_bottom = -48.24
rect_pivot_offset = Vector2( -236, 284 )
custom_fonts/font = SubResource( 6 )

[node name="PanelContainer" type="PanelContainer" parent="LevelTimer"]
margin_right = 14.0
margin_bottom = 14.0

[node name="TimerIn" type="Sprite" parent="LevelTimer/PanelContainer"]
position = Vector2( 632.5, 51.0445 )
scale = Vector2( 0.0822917, 0.0709261 )
texture = ExtResource( 10 )

[node name="TimerOut" type="Sprite" parent="LevelTimer/PanelContainer"]
position = Vector2( 633, 49 )
scale = Vector2( 0.0854167, 0.075 )
texture = ExtResource( 6 )

[node name="Timer" type="Timer" parent="."]

[node name="Pause_Menu_button" type="Button" parent="."]
margin_left = 1185.0
margin_top = 20.0
margin_right = 1243.0
margin_bottom = 69.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )

[node name="PauseMenu" parent="." instance=ExtResource( 23 )]

[node name="LevelComplete" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 3
visible = false

[node name="PanelContainer" type="PanelContainer" parent="LevelComplete"]
margin_left = 311.0
margin_top = -41.0
margin_right = 1008.0
margin_bottom = 658.0
custom_styles/panel = SubResource( 36 )

[node name="EmptyLeft" type="Sprite" parent="LevelComplete/PanelContainer"]
position = Vector2( 230, 183 )
rotation = -0.17003
scale = Vector2( 0.0189937, 0.0185636 )
texture = ExtResource( 42 )

[node name="Star1" type="Sprite" parent="LevelComplete/PanelContainer"]
position = Vector2( 230, 184 )
rotation = -0.17003
scale = Vector2( 0.0198117, 0.0184698 )
texture = ExtResource( 33 )

[node name="EmptyMiddle" type="Sprite" parent="LevelComplete/PanelContainer"]
position = Vector2( 344.226, 147.591 )
rotation = 0.0351319
scale = Vector2( 0.0176456, 0.0168072 )
texture = ExtResource( 40 )

[node name="Star2" type="Sprite" parent="LevelComplete/PanelContainer"]
position = Vector2( 346, 147 )
scale = Vector2( 0.0175256, 0.0175037 )
texture = ExtResource( 34 )

[node name="EmptyRight" type="Sprite" parent="LevelComplete/PanelContainer"]
position = Vector2( 457.435, 178.216 )
rotation = 0.271142
scale = Vector2( 0.0766423, 0.068795 )
texture = ExtResource( 44 )

[node name="Star3" type="Sprite" parent="LevelComplete/PanelContainer"]
position = Vector2( 457, 177 )
rotation = 0.271142
scale = Vector2( 0.0186099, 0.0180068 )
texture = ExtResource( 27 )

[node name="complete" type="Label" parent="LevelComplete"]
margin_left = 473.0
margin_top = 221.0
margin_right = 826.0
margin_bottom = 259.0
custom_fonts/font = SubResource( 37 )
text = "Level Complete"

[node name="level" type="Label" parent="LevelComplete"]
margin_left = 598.0
margin_top = 270.0
margin_right = 668.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 34 )
text = "Level "

[node name="lvl_num1" type="Label" parent="LevelComplete"]
margin_left = 667.0
margin_top = 270.0
margin_right = 698.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 40 )

[node name="Restart" type="Button" parent="LevelComplete"]
pause_mode = 2
margin_left = 584.0
margin_top = 340.275
margin_right = 656.0
margin_bottom = 402.275
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 39 )
custom_styles/normal = SubResource( 17 )

[node name="ReplayTxt" type="Sprite" parent="LevelComplete"]
position = Vector2( 620, 325.275 )
scale = Vector2( 0.0636038, 0.0536812 )
texture = ExtResource( 39 )

[node name="Continue" type="Button" parent="LevelComplete"]
pause_mode = 2
margin_left = 690.0
margin_top = 340.275
margin_right = 758.0
margin_bottom = 401.275
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 19 )
custom_styles/normal = SubResource( 20 )

[node name="NextTxt" type="Sprite" parent="LevelComplete"]
position = Vector2( 723, 328.275 )
scale = Vector2( 0.0632888, 0.0468406 )
texture = ExtResource( 45 )

[node name="MainMenu" type="Button" parent="LevelComplete"]
pause_mode = 2
margin_left = 480.0
margin_top = 340.275
margin_right = 554.0
margin_bottom = 401.275
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 22 )
custom_styles/normal = SubResource( 23 )

[node name="HomeTxt" type="Sprite" parent="LevelComplete"]
position = Vector2( 518, 323.275 )
scale = Vector2( 0.0723439, 0.0584812 )
texture = ExtResource( 21 )

[node name="HappyPongPagong" type="Sprite" parent="LevelComplete"]
position = Vector2( 852.813, 398.469 )
scale = Vector2( 0.021467, 0.0186392 )

[node name="GameOver" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 3
visible = false

[node name="PanelContainer" type="PanelContainer" parent="GameOver"]
margin_left = 311.0
margin_top = -41.0
margin_right = 1008.0
margin_bottom = 658.0
custom_styles/panel = SubResource( 36 )

[node name="EmptyRight" type="Sprite" parent="GameOver/PanelContainer"]
position = Vector2( 457.435, 178.216 )
rotation = 0.271142
scale = Vector2( 0.0766423, 0.068795 )
texture = ExtResource( 44 )

[node name="EmptyMiddle" type="Sprite" parent="GameOver/PanelContainer"]
position = Vector2( 347.014, 145 )
rotation = 0.0351318
scale = Vector2( 0.0198124, 0.0184692 )
texture = ExtResource( 40 )

[node name="EmptyLeft" type="Sprite" parent="GameOver/PanelContainer"]
position = Vector2( 231, 183.778 )
rotation = -0.17003
scale = Vector2( 0.0199644, 0.0194041 )
texture = ExtResource( 42 )

[node name="sad_pagong" type="Sprite" parent="GameOver"]
position = Vector2( 864.313, 399.813 )
scale = Vector2( 0.0186494, 0.0167317 )
texture = ExtResource( 29 )

[node name="BetterLuckNxtTym" type="Sprite" parent="GameOver"]
position = Vector2( 729, 349 )
scale = Vector2( 0.0774277, 0.0694438 )
texture = ExtResource( 38 )

[node name="Restart" type="Button" parent="GameOver"]
pause_mode = 2
margin_left = 576.0
margin_top = 334.0
margin_right = 646.0
margin_bottom = 386.0
custom_styles/hover = SubResource( 27 )
custom_styles/pressed = SubResource( 28 )
custom_styles/normal = SubResource( 29 )

[node name="ReplayTxt" type="Sprite" parent="GameOver"]
position = Vector2( 609, 323 )
scale = Vector2( 0.0551655, 0.0512 )
texture = ExtResource( 39 )

[node name="MainMenu" type="Button" parent="GameOver"]
pause_mode = 2
margin_left = 482.0
margin_top = 334.0
margin_right = 554.0
margin_bottom = 387.0
custom_styles/hover = SubResource( 24 )
custom_styles/pressed = SubResource( 25 )
custom_styles/normal = SubResource( 26 )

[node name="HomeTxt" type="Sprite" parent="GameOver"]
position = Vector2( 517, 322 )
scale = Vector2( 0.0712693, 0.0569 )
texture = ExtResource( 21 )

[node name="GameOver" type="Label" parent="GameOver"]
margin_left = 527.0
margin_top = 214.0
margin_right = 786.0
margin_bottom = 254.0
custom_fonts/font = SubResource( 30 )
text = "Game Over"

[node name="level" type="Label" parent="GameOver"]
margin_left = 608.0
margin_top = 261.0
margin_right = 688.0
margin_bottom = 291.0
custom_fonts/font = SubResource( 34 )
text = "Level "

[node name="lvl_num2" type="Label" parent="GameOver"]
margin_left = 678.0
margin_top = 260.0
margin_right = 709.0
margin_bottom = 290.0
custom_fonts/font = SubResource( 40 )

[node name="for_second_bg" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="Bg" type="Sprite" parent="for_second_bg"]
modulate = Color( 0.32549, 0.32549, 0.32549, 1 )
position = Vector2( 640.25, 360.75 )
scale = Vector2( 0.21325, 0.212296 )
texture = ExtResource( 24 )

[node name="HSlider" type="HSlider" parent="."]
visible = false
margin_left = 121.0
margin_top = 165.0
margin_right = 368.0
margin_bottom = 181.0

[node name="HealthBar" type="TextureProgress" parent="."]
visible = false
margin_right = 383.0
margin_bottom = 91.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 4 )
tint_under = Color( 0.156863, 0.054902, 0.054902, 1 )
tint_progress = Color( 0.85098, 0.0784314, 0.0784314, 1 )

[connection signal="pressed" from="Pause_Menu_button" to="PauseMenu" method="_on_Pause_Menu_button_pressed"]
[connection signal="pressed" from="LevelComplete/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="LevelComplete/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="LevelComplete/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="GameOver/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="GameOver/MainMenu" to="GameOver/MainMenu" method="_on_MainMenu_pressed"]
